--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -31,3 +31,6 @@ set-option -g pane-base-index 1
 
 # Don't wait for an escape sequence after seeing C-b.
 set-option -s escape-time 0
+
+# Enable mouse
+set-option -g mouse 1
